added cors to dependencies

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "mongodb": "^6.18.0"
+    "mongodb": "^6.18.0",
+    "cors": "^2.8.5"
   },
   "name": "backend",
   "version": "1.0.0",
