--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongodb": "^6.18.0",
-    "cors": "^2.8.5"
+    "mongoose": "^8.17.1"
   },
   "name": "backend",
   "version": "1.0.0",
